# parel-python

./: .gitignore  README.md  parity.json  pyproject.toml
examples/: byom_deploy.py  compare.py  credits.py  image_generation.py  quickstart.py
src/parel_cloud/: __init__.py  _http.py  _polling.py  client.py  errors.py  types.py
src/parel_cloud/namespaces/: __init__.py  compare.py  credits.py  generations.py  gpu.py  models.py  openai.py  tasks.py
tests/: conftest.py  test_client.py  test_errors.py  test_http.py  test_namespaces.py  test_parity.py  test_polling.py
